--- a/pages/main.html
+++ b/pages/main.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nike</title>
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
     <div class="wrap">
@@ -22,12 +24,23 @@
             <div class="text_box">
                 <h1>너만을<br> 위한 나이키</h1>
                 <p>ADV 기술을 적용한 2023 나이키 축구 국가대표팀 저지를 만나 보세요.</p>
-                <a href="#">SHOP</a>
+                <a href="#" class="btn">SHOP</a>
             </div>
         </div>
 
         <div class="container">
-            <div class="section_01"></div>
+            <div class="section_01">
+                <ul class="list">
+                    <li>
+                        <h3>for Women</h3>
+                        <a href="#">Shop now <i class="xi-arrow-right"></i></a>
+                    </li>
+                    <li>
+                        <h3>for man</h3>
+                        <a href="#">Shop now <i class="xi-arrow-right"></i></a>
+                    </li>
+                </ul>
+            </div>
             <div class="section_02"></div>
             <div class="section_03"></div>
             <div class="section_04"></div>
@@ -51,5 +64,33 @@
 
 <script>
     $('.header').load('../inc/header.html')
+
+    ScrollReveal().reveal('.photo',{
+        rotate:{
+            z: 20,
+        },
+        scale: 2,
+        duration: 1000,
+        easing: 'ease-in-out'
+    });
+
+    ScrollReveal().reveal('.text_box h1',{
+        delay:600,
+        origin:'bottom',
+        distance: '30px',
+    });
+
+    ScrollReveal().reveal('.text_box p',{
+        delay:900,
+        origin:'top',
+        distance: '30px',
+    });
+
+    ScrollReveal().reveal('.text_box a',{
+        delay: 1000,
+        origin:'left',
+        distance: '50px',
+    });
+
 </script>
 </html>
